add some kratos codes and leetcodes
